--- a/Lenguaje_de_marcas/architeXture/estilos.css
+++ b/Lenguaje_de_marcas/architeXture/estilos.css
@@ -119,7 +119,6 @@ header {
     padding: 2%;
 }
 header p {
-    border: red solid 1px;
     width: 60%;
     margin-top: 20px;
     font-style: italic;
@@ -137,12 +136,12 @@ header p {
 
 /*** ASIDE ***/ /*** SECTION ***/
 #texto{
-    height: 100%;
+    height: 550px;
 }
 
 
 aside{
-    height: 100%;
+    height: 550px;
 }
 
 
@@ -174,7 +173,8 @@ section > ul {
 section article {
     padding: 30px 60px 0 60px;
     position: relative;
-    border: solid 1px red;
+    /**border: solid 1px red;**/
+    border-left: solid 5px #1f4677;
     margin-top: 20px;
 }
 
@@ -182,6 +182,10 @@ section article p {
     padding: 20px 0;
 }
 
+aside section ul li a{
+    text-decoration: none;
+    color: #4484bc;
+}
 
 
 
@@ -190,13 +194,18 @@ section article p {
 
 /*** FOOTER ***/
 
-footer section {
-    float: left;
-    background-color: #ffffff;
-}
-
-
-
 footer {
     background-color: #d2e1f6;
+    height: 100px;
+    width: 100%;
+    clear: left;
 }
+
+footer section {
+    display: inline-block;
+    width: 15%;
+    margin-top: 20px;
+    margin-left: 100px;
+    float: left;
+}
+
