--- a/Lenguaje_de_marcas/architeXture/estilos.css
+++ b/Lenguaje_de_marcas/architeXture/estilos.css
@@ -122,6 +122,7 @@ header p {
     width: 60%;
     margin-top: 20px;
     font-style: italic;
+    color: rgb(97, 96, 96);
 }
 
 #imagenHeader{
@@ -135,26 +136,40 @@ header p {
 
 
 /*** ASIDE ***/ /*** SECTION ***/
+main{
+    height: 700px;
+    background-color: #ffffff;
+    position: relative;
+}
 #texto{
-    height: 550px;
+    height: 90%;
+    position: absolute;
+    left: 33%;
 }
 
 
 aside{
-    height: 550px;
+    height: 90%;
+    position: absolute;
 }
 
 
 
 aside {
+    margin-top: 15px;
+    margin-bottom: 15px;
     float: left;
     padding-left: 2%;
-    width: 30%;    
+    width: 29.72%;    
     background-color: #ffffff;
+    border-right: solid 10px #1f4677;
+
 }
 aside section h3 {
     padding-bottom: 20px;
     padding-top: 20px;
+    font-weight: 600;
+    font-size: 22px;
 }
 aside section {
     padding-top: 3%;
@@ -166,20 +181,22 @@ section > ul {
 
 
 #texto {
+    margin-top: 15px;
+    margin-bottom: 15px;
     background-color: white;
-    width: 68%;
+    width: 67%;
     float: left;
 }
 section article {
     padding: 30px 60px 0 60px;
     position: relative;
-    /**border: solid 1px red;**/
-    border-left: solid 5px #1f4677;
     margin-top: 20px;
 }
 
 section article p {
     padding: 20px 0;
+    font-style: italic;
+    color: rgb(97, 96, 96);
 }
 
 aside section ul li a{
@@ -194,17 +211,32 @@ aside section ul li a{
 
 /*** FOOTER ***/
 
-footer {
+footer{
+    float: left;
     background-color: #d2e1f6;
-    height: 100px;
+    padding-bottom: 50px;
     width: 100%;
     clear: left;
 }
 
 footer section {
     display: inline-block;
-    width: 15%;
+    width: 14%;
     margin-top: 20px;
-    margin-left: 100px;
+    margin-left: 2%;
+    margin-right: 8%;
+}
+footer section h4{
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+footer section ul{
+    padding-left: 20px;
+}
+footer section ul li a{
+    text-decoration: none;
+    color: #1f4677;
 }
 
