--- a/Lenguaje_de_marcas/architeXture/estilos.css
+++ b/Lenguaje_de_marcas/architeXture/estilos.css
@@ -142,14 +142,13 @@ main{
     position: relative;
 }
 #texto{
-    height: 90%;
     position: absolute;
     left: 33%;
 }
 
 
 aside{
-    height: 90%;
+    height: 95%;
     position: absolute;
 }
 
@@ -181,7 +180,6 @@ section > ul {
 
 
 #texto {
-    margin-top: 15px;
     margin-bottom: 15px;
     background-color: white;
     width: 67%;
@@ -191,6 +189,9 @@ section article {
     padding: 30px 60px 0 60px;
     position: relative;
     margin-top: 20px;
+}
+section article h2{
+    color: #1f4677;
 }
 
 section article p {
