--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -62,6 +62,22 @@
 * {
     padding: 0;
     margin: 0;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+body{
+    background: -webkit-linear-gradient(70deg, #d81444, grey);  
+
+}
+
+/**Encabezado**/
+header{
+    background-color: #d81444;
+    padding-bottom: 100px;
+}
+header h1{
+    padding: 25px;
+    font-size: 50px;
 }
 
 
@@ -70,21 +86,19 @@ nav {
     text-align: center;
 }
 nav ul{
-    background-image: url(images/bluePrintPaper.png);
-    padding: 0%;
-    height: 60px;
+    background-color: grey;
 }
 nav ul li {
     display: inline-block;
-    width: 14%;
-    margin-top: 25px;
-
+    width: 7%;
+    margin: 10px;
+    background-color: white;
 }
 
 nav ul li a {
     font-weight: bold;
     text-decoration: none;
-    color:#1f4677;
+    color:black;
     font-size: 20px;
     
 }
@@ -92,18 +106,54 @@ nav ul li a {
 
 /**Aside**/
 aside {
-    float: right;
+    text-decoration: none ;
+    float: left;
+    width: 15%;
+}
+aside ul h3{
+    margin: 30px;
     text-align: center;
+}
+aside ul li a {
+    text-decoration: none;
+    color: black;
+    margin-left: 90px ;
+    
+}
+
+
+aside ul li img {
+    width: 100px;
 }
 
 
 /**Main**/
 main {
-    width: 70%;
-    border: 1px red solid;
+    width: 83%;
     float: left;
-    text-align: center;
+    text-align: center; 
 }
 main article {
     float: left;
+    padding: 2%;
+}
+main article h4{
+    font-size: 20px;
+    background-color: white;
+
+}
+main article img{
+    width: 60%;
+}
+
+
+
+
+
+
+/**Seccion**/
+section{
+    float: left;
+    border: solid blue 1px;
+    width: 100%;
 }
