--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -66,7 +66,7 @@
 }
 
 body{
-    background: -webkit-linear-gradient(70deg, #d81444, grey);  
+    /* background: -webkit-linear-gradient(70deg, #d81444, grey);   */
 
 }
 
@@ -108,7 +108,8 @@ nav ul li a {
 aside {
     text-decoration: none ;
     float: left;
-    width: 15%;
+    width: 13%;
+    background-color: aquamarine;
 }
 aside ul h3{
     margin: 30px;
@@ -127,23 +128,24 @@ aside ul li img {
 }
 
 
+
+
 /**Main**/
 main {
-    width: 83%;
     float: left;
-    text-align: center; 
+    width: 85%;
+    margin-top: 50px;
+    background-color: #2c2c2c;
+    padding: 19px;
 }
-main article {
-    float: left;
-    padding: 2%;
-}
-main article h4{
-    font-size: 20px;
-    background-color: white;
 
-}
-main article img{
-    width: 60%;
+main article{
+    size: 20px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+    float: left;
+    padding: 5px;
+    background-color: #636363;
 }
 
 
