--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -102,6 +102,9 @@ nav ul li a {
     font-size: 20px;
     
 }
+/* object-fit: cover; */
+
+
 
 
 /**Aside**/
@@ -133,20 +136,57 @@ aside ul li img {
 /**Main**/
 main {
     float: left;
-    width: 85%;
+    width: 82%;
     margin-top: 50px;
-    background-color: #2c2c2c;
+    background-color: #6e6e6e;
     padding: 19px;
+    padding-right: 10px;
 }
 
 main article{
-    size: 20px;
     margin-right: 10px;
     margin-bottom: 30px;
     float: left;
-    padding: 5px;
-    background-color: #636363;
+    padding: 8px;
+    width: 15%;
 }
+#PORTADAS{
+    width: 100%;
+}
+
+
+main article h4{
+    width: 12.3%;
+    color: black;
+    background-color: white;
+    position: absolute;
+}
+
+    /* GENEROS */
+    #kodomo{
+        background-color: #fdff78;
+    }
+
+    #shounen{
+        background-color: #ff6868;
+    }
+
+    #shojo{
+        background-color: #68fcff;
+    }
+
+    #seinen{
+        background-color: #7b2eff;
+    }
+    
+    #josei{
+        background-color: #69ff6e;
+    }
+
+
+
+
+    
 
 
 
