--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -138,7 +138,7 @@ main {
     float: left;
     width: 82%;
     margin-top: 50px;
-    background-color: #6e6e6e;
+    background-color: white;
     padding: 19px;
     padding-right: 10px;
 }
@@ -157,9 +157,11 @@ main article{
 
 main article h4{
     width: 12.3%;
-    color: black;
-    background-color: white;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.800);
     position: absolute;
+    padding: 10px 0;
+    text-align: center;
 }
 
     /* GENEROS */
