--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -66,7 +66,7 @@ margin: top right botton left;
 }
 
 body{
-    background: -webkit-linear-gradient(360deg, #d81444 10%, black);  
+    background: -webkit-linear-gradient(180deg, #d81444 10%, black);  
 }
 
 /**Encabezado**/
@@ -91,6 +91,9 @@ nav ul li {
     display: inline-block;
     width: 7%;
     margin: 10px;
+    padding: 12px;
+    background-color: white;
+    border-radius: 7px;
 }
 
 nav ul li a {
@@ -98,6 +101,7 @@ nav ul li a {
     text-decoration: none;
     color:black;
     font-size: 20px;
+
 }
 /* object-fit: cover; */
 
@@ -109,8 +113,10 @@ aside {
     text-decoration: none ;
     float: left;
     width: 13%;
-    border-right: 5px solid black   ;
+    border-right: 5px solid white;
+    height: 100%;
 }
+
 aside ul h3{
     margin: 30px 0 15px 0 ;
     text-align: center;
