--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -58,7 +58,15 @@ margin: top right botton left;
 
     ++FUSION++
     https://lenguajecss.com/css/efectos/modos-de-fusion/
+
+    ++NEON++
+    https://css-tricks.com/how-to-create-neon-text-with-css/
+    https://freefrontend.com/css-glow-text-effects/
 */
+
+
+
+
 
 /**Todo**/
 * {
@@ -68,30 +76,83 @@ margin: top right botton left;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+
+.neonText {
+    animation: flicker 1.5s infinite alternate;
+    color: #fff;
+  }
+  
+  h1 {
+    font-size: 4.2rem;    
+  }
+  
+  /* Flickering animation */
+  @keyframes flicker {  
+      
+    0%, 18%, 22%, 25%, 53%, 57%, 100% {
+  
+            text-shadow:
+            0 0 4px #fff,
+            0 0 19px #fff,
+            0 0 40px rgb(255, 0, 98),
+            0 0 80px rgb(255, 0, 98),
+            0 0 90px rgb(255, 0, 98),
+            0 0 100px rgb(255, 0, 98),
+            0 0 150px rgb(255, 0, 98);
+    
+    }
+    
+    20%, 24%, 55% {        
+        text-shadow: none;
+    }    
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 body{
-    background: -webkit-linear-gradient(180deg, #d81444 10%, black);  
-}
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(216,20,68,1) 100%);}
 
 /**Encabezado**/
 header{
-    background-color: #d81444;
-    padding-bottom: 200px;
+    padding-bottom: 150px;
     position: relative;
+    background-image: url("../images/banner3.png");
+    
+    mix-blend-mode: lighten;
 }
+
+
 
 header h1{
     position: absolute;
+    color: white;
+    background: linear-gradient(90deg, rgba(0,0,0,1) 30%, rgba(255, 255, 255, 0) 60%);
+    height: 90px;
+    padding: 60px 800px 0 40px;
+    font-size: 300%;
 }
+    header p {  
+        position: absolute;
+        color: white;
+        font-style: italic  ;
+        margin: 115px 0 5px 40px;
+    }
 
-header img{
-    position: absolute;
-    mix-blend-mode: multiply;
-}
-
-header h1{
-    padding: 25px;
-    font-size: 50px;
-}
 
 
 /**Navegación**/
@@ -99,24 +160,44 @@ nav {
     text-align: center;
 }
 nav ul{
-    background-color: grey;
+    background-color: rgb(0, 0, 0);
 }
 nav ul li {
     display: inline-block;
     width: 7%;
     margin: 5px;
     padding: 5px;
-    background-color: white;
+    /* background-color: white; */
     border-radius: 7px; 
 }
+/* nav ul li:hover {
+    display: inline-block;
+    width: 7%;
+    margin: 5px;
+    padding: 5px;
+    background-color: #ab3e59;
+    border-radius: 7px; 
+} */
 
 nav ul li a {
     font-weight: bold;
     text-decoration: none;
-    color:black;
+    color: white;
     font-size: 20px;
 
 }
+
+nav ul li a:hover {
+    color: rgb(255, 255, 255);
+    text-shadow:
+    0 0 2px rgb(255, 255, 255),
+    0 0 10px rgb(255, 255, 255),
+    0 0 10px rgb(255, 0, 98),
+    0 0 12px rgb(255, 0, 98),
+    0 0 25px rgb(255, 0, 98),
+    0 0 30px rgb(255, 0, 98);
+}
+
 /* object-fit: cover; */
 
 
@@ -142,14 +223,15 @@ aside ul h3{
     background-color: white;
 }
 
-aside ul li p{
-    position: absolute;
-    top: 35%;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.581);
-    margin: 0 0 0 25%;
-    padding: 0 17%;
-}
+    #textoTop{
+        text-decoration: none;
+        position: absolute;
+        top: 35%;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.581);
+        margin: 0 0 0 11%;
+        padding: 0 32.5%;
+    }
 
 aside ul li{
     position: relative;
@@ -184,7 +266,7 @@ aside ul li{
         margin: 0 10%;
         height: 60px;
         object-fit: cover;
-        border: 3px solid #e3e4e5;
+        border: 3px solid #a9a69d;
     }
     
     #top3{
@@ -214,7 +296,12 @@ main article{
     float: left;
     padding: 8px;
     width: 15%;
+    border-radius: 3%;
+    
 }
+
+
+
 #PORTADAS{
     width: 100%;
 }
@@ -233,24 +320,25 @@ main article h4{
     #kodomo{
         background-color: #fdff78;
     }
-
     #shounen{
         background-color: #ff6868;
     }
-
     #shojo{
         background-color: #68fcff;
     }
-
     #seinen{
         background-color: #7b2eff;
     }
-    
     #josei{
         background-color: #69ff6e;
     }
 
-
+    /* #josei:hover{
+        box-shadow:
+        0 0 23px #69ff6e,
+        0 0 10px #69ff6e,
+        inset 0 0 20px #69ff6e;
+    } */
 
 
     
