--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -74,6 +74,7 @@ margin: top right botton left;
     margin: 0;
     overflow-x: hidden; /* Hide horizontal scrollbar */
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    scroll-behavior: smooth;
 }
 
 
