--- a/Lenguaje_de_marcas/2cShop/style/style.css
+++ b/Lenguaje_de_marcas/2cShop/style/style.css
@@ -1,96 +1,202 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-}
-body{
-    margin: 10px 20% 10px 20%;
-    background-color: #ff7b2d;
-}
+
+
+
+
+    /* ALL */
+    *{
+        padding: 0;
+        margin: 0;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+    }
+
+    /* BODY */
+    body{
+        margin: 10px 20% 10px 20%;
+        background-color: #ff7b2d;
+    }
 
 
     /* HEADER */
-        header h1{
-            color: white;
-            width: 100%;
-        }
-        header ul{
-            background-color: #2e2e2e;
-            padding: 12px 50px 32px 10px;
-            margin: 20px 0 10px 0;
-            border-radius: 10px;
-        }
+    header h1{
+        color: white;
+        width: 100%;
+    }
 
+    header ul{
+        background-color: #2e2e2e;
+        padding: 12px 50px 32px 10px;
+        margin: 20px 0 10px 0;
+        border-radius: 10px;
+    }
 
-        header ul li{
-            float: left;
-            list-style: none;
-            margin-right: 3%;
-        }
+    header ul li{
+        float: left;
+        list-style: none;
+        margin-right: 3%;
+    }
 
-        header ul li a{
-
-            text-decoration: none;
-            color: #b6e9ff;
-            font-weight: 700;
-        }
+    header ul li a{
+        text-decoration: none;
+        color: #b6e9ff;
+        font-weight: 700;
+    }
 
         
     /* TOP SECTION */
-        #topSection{
-            padding: 40px 40px 40px 40px;
-            border-radius: 10px;
-            background: linear-gradient(rgb(178, 250, 255), 20% , #47bfe6 80%, rgb(178, 250, 255));
-            margin-bottom: 10px;
-        }
-        #topSection h3{
-            font-weight: 100;
-            padding: 0 0 30px 0;
-        }
+    #topSection{
+        padding: 40px 40px 40px 40px;
+        border-radius: 10px;
+        /* background: linear-gradient(rgb(178, 250, 255), 20% , #47bfe6 80%, rgb(178, 250, 255)); */
+        background-color: #47bfe6;
 
-        #topSection p{
-            font-size: 14px;
-            color: rgb(74, 74, 74);
-        }
+        box-shadow: 
+            inset 0px 20px 40px -10px white,
+            inset 0px -20px 40px -10px white; 
+        
+        margin-bottom: 10px;
+    }
+    #topSection h3{
+        font-weight: 100;
+        padding: 0 0 30px 0;
+    }
+
+    #topSection p{
+        font-size: 14px;
+        color: rgb(74, 74, 74);
+    }
 
     
     /* ASIDE */
-        aside{
-            float: left;
-            width: 25%;
-        }
+    aside{
+        float: left;
+        width: 25%;
+    }
 
-        aside section{
-            padding: 7px;
-            background-color: white;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
+    aside section{
+        padding: 7px;
+        background-color: #f2f2f2;
+        border-radius: 10px;
+        margin-bottom: 10px;
+    }
 
-        aside h3{
-            color: black;
-            font-size: 16px;
-            background-color: #ade4ea;
-            border-radius: 10px;
-            padding: 5px;
-        }
+    aside section h3{
+        color: black;
+        font-size: 16px;
+        background-color: #ade4ea;
+        border-radius: 10px;
+        padding: 5px;
+    }
 
-        aside ul{
-            padding: 0 0 0 40px;
-        }
-        aside li{
-            color: #2dc2e0;
-            padding-top: 30px;
-            border-bottom: dotted 1px #41b6c3;
-        }
+    aside ul{
+        padding: 0 0 0 40px;
+    }
 
-        aside a{
-            text-decoration: none;
-            color: black;
-            font-size: 13px;
-        }
+    aside li{
+        color: #2dc2e0;
+        padding-top: 30px;
+        border-bottom: dotted 1px #41b6c3;
+    }
 
-        aside li:first-letter {
-            font-size: 15px;
-        }
+    aside a{
+        text-decoration: none;
+        color: black;
+        font-size: 14px;
+    }
+
+    aside li::first-letter {
+        font-size: 20px;
+    }
+
+    /* MAIN */
+    main{
+        float: left;
+        width: 74%;
+        margin-left: 7px;
+        background-color: #f2f2f2;
+        border-radius: 10px;
+    }
+
+    main section{
+        float: left;
+    }
+    main section h3{
+        margin: 30px 30px 10px 30px;
+        color: black;
+        font-size: 20px;
+        background-color: #ade4ea;
+        border-radius: 10px;
+        padding: 25px;
+    }
+
+    main section article{
+        float: left;
+        background-color: white;
+        border: 15px #00a0bc solid ;
+        border-radius: 10px;
+        width: 24%;
+        text-align: center;
+        margin: 25px 20px 20px 120px;
+    }
+
+    main section article img{
+        margin: 30px 40px 0 40px;
+    }
+
+    main section article a{
+        color: #4bb3c7;
+    }
+
+    main section article p{
+        text-align: left;
+        margin: 8px 0 0 16px;
+    }
+
+    #buyNow{
+        margin: 30px 0 20px 0;
+    }
+
+    #section2 p{
+        font-size: 14.5px;
+        margin: 30px 30px 10px 30px;
+    }
+
+
+
+
+    #paymentMethods{
+        float: right;
+        margin: 30px 30px 40px 0;
+    }
+
+    #cart{
+        float: left;
+        margin: 30px 0 40px 30px;
+    }
+
+
+    /* FOOTER */
+    footer{
+        position: relative;
+        margin: 5px 0 20px 0;
+        float: left;
+        height: 50px;
+        width: 100%;
+        background-color: #2e2e2e;
+        border-radius: 10px;
+    }
+
+    footer small{
+        position: absolute;
+        width: 100%;
+        font-size: 12px;
+        margin: 18px 0 0 0;
+        color: white;
+        text-align: right;
+    }
+
+    footer small a{
+        margin: 0 15px 0 0;
+        color: #8d8d8d;
+    }
