--- a/Lenguaje_de_marcas/2cShop/style/style.css
+++ b/Lenguaje_de_marcas/2cShop/style/style.css
@@ -1,7 +1,5 @@
 
-
-/* 2cShop index Style Sheet */
-
+    /* 2cShop style sheet */
 
     /* ----ALL---- */
     *{
@@ -18,7 +16,7 @@
     }
 
 
-    /* ----HEADER---- */
+    /* HEADER */
     header h1{
         color: white;
         width: 100%;
@@ -45,26 +43,29 @@
 
         header ul li a:hover{
             border-bottom: solid white 3px;
-        }
+            color: white;
+        }   
 
         
     /* ----TOP SECTION---- */
     #topSection{
         padding: 40px 40px 40px 40px;
         border-radius: 10px;
-
-        /* top section background con lineal-gradient */
-        background: linear-gradient(rgb(178, 250, 255), 20% , #47bfe6 80%, rgb(178, 250, 255));
-
-        /* top section background con box-shadow */
-        /* 
-            background-color: #47bfe6;
-            box-shadow: 
-                inset 0px 20px 40px -10px white,
-                inset 0px -20px 40px -10px white;  */
-        
         margin-bottom: 10px;
+
+        /* With lineal-gradient */
+        background: linear-gradient(rgb(178, 250, 255), 20% , #47bfe6 80%, rgb(178, 250, 255));
+        
+        /* With box-shadow */
+        /* background-color: #47bfe6;
+
+        box-shadow: 
+            inset 0px 20px 40px -10px white,
+            inset 0px -20px 40px -10px white; */
+        
+
     }
+
     #topSection h3{
         font-weight: 100;
         padding: 0 0 30px 0;
@@ -162,11 +163,11 @@
         margin: 8px 0 0 16px;
     }
 
-    .buyNow{
+    #buyNow{
         margin: 30px 0 20px 0;
     }
 
-    section p{
+    #section2 p{
         font-size: 14.5px;
         margin: 30px 30px 10px 30px;
     }
