--- a/Lenguaje_de_marcas/2cShop/style/style.css
+++ b/Lenguaje_de_marcas/2cShop/style/style.css
@@ -151,7 +151,7 @@
     }
 
     main section article img{
-        margin: 30px 40px 0 40px;
+        margin: 30px 50% 0 25%;
     }
 
     main section article a{
