--- a/Lenguaje_de_marcas/2cShop/style/style.css
+++ b/Lenguaje_de_marcas/2cShop/style/style.css
@@ -147,11 +147,13 @@
         border-radius: 10px;
         width: 24%;
         text-align: center;
-        margin: 25px 20px 20px 120px;
+        margin: 25px 20px 20px 100px;
+        width: 200px;
     }
 
     main section article img{
-        margin: 30px 50% 0 25%;
+        margin: 30px 50px 0 25%;
+        padding: 0 30px 0 0;
     }
 
     main section article a{
