--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -202,6 +202,122 @@ nav ul li a:hover {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* PENDIENTE */
+
+label i{
+    color: white;
+    position: absolute;
+    padding: 20px 0 0 20px;
+}
+
+#cuentaLateral{
+    position: absolute;
+    float: left;
+    left: 100%;
+}
+
+
+.checkbtn{
+    display: block;
+}
+#cuentaLateral ~ ul{
+    position: fixed;
+    float: left;
+    left: 100%;
+    transition: all .2s;
+}
+#check:checked ~ ul{
+    left:50%;
+    background-color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**Aside**/
 aside {
     text-decoration: none ;
