--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -114,7 +114,7 @@ body{
 
 #arriba{
     position: fixed;
-    right: 5px;
+    right: 8px;
     bottom: 5px;
 }
     #arriba img{
@@ -129,6 +129,14 @@ header{
     background-image: url("../images/banners/banner3.png");
     
     mix-blend-mode: lighten;
+}
+
+header div{
+    position: absolute;
+    right: 0;
+    height: 150px;
+    width: 140px;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 40%, rgb(255, 255, 255) 60%);
 }
 
 
@@ -202,115 +210,54 @@ nav ul li a:hover {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* PENDIENTE */
+/* LATERAL DISPLAY */
 
 label i{
-    color: white;
-    position: absolute;
-    padding: 20px 0 0 20px;
-}
-
-#cuentaLateral{
-    position: absolute;
-    float: left;
-    left: 100%;
-}
-
-
-.checkbtn{
-    display: block;
-}
-#cuentaLateral ~ ul{
+    color: blueviolet;
     position: fixed;
+    right: 0;
+    margin: 50px 18px 0 0;
+    cursor: pointer;
+    background-color: red;
+    padding:  5px 5px 5px 5px;
+}
+#check{
+    display: none;
+}
+#cuentaLateral{
     float: left;
     left: 100%;
-    transition: all .2s;
-}
-#check:checked ~ ul{
-    left:50%;
-    background-color: red;
 }
 
+#lateralCheck{
+    color: blue;
+}
+    #cuentaLateral ul{
+        position: fixed;
+        width: 20%;
+        height: 100%;
+        right: -100%;
+        margin-top: -200px;
+        transition: all .5s;
+        background-color: #fff;
+        z-index: 1;
+    }
+    #cuentaLateral ul li{
+        display: block;
+        margin: 40px 0;
+        float: left;
+        padding: 10px 100px 10px 30px;
+    }
+
+    #cuentaLateral ul li a{
+        color: black;
+        /* border: 1px red solid; */
+    }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    #check:checked ~ ul{
+        right:0;
+    }
 
 
 
@@ -405,12 +352,14 @@ main {
     padding-right: 10px;
 }
 
+
+/* cada manga */
 main article{
     margin-right: 10px;
     margin-bottom: 30px;
     float: left;
     padding: 8px;
-    width: 15%;
+    width: 233px;
     border-radius: 3%;
     
 }
@@ -423,7 +372,7 @@ main article{
 
 
 main article h4{
-    width: 12.3%;
+    width: 233px;
     color: white;
     background-color: rgba(0, 0, 0, 0.800);
     position: absolute;
