--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -163,13 +163,13 @@ header h1{
 
 
 /**Navegación**/
-nav {
+#mainNav {
     text-align: center;
 }
-nav ul{
+#mainNav ul{
     background-color: rgb(0, 0, 0);
 }
-nav ul li {
+#mainNav ul li {
     display: inline-block;
     width: 7%;
     margin: 5px;
@@ -177,7 +177,7 @@ nav ul li {
     /* background-color: white; */
     border-radius: 7px; 
 }
-/* nav ul li:hover {
+/* #mainNav ul li:hover {
     display: inline-block;
     width: 7%;
     margin: 5px;
@@ -186,7 +186,7 @@ nav ul li {
     border-radius: 7px; 
 } */
 
-nav ul li a {
+#mainNav ul li a {
     font-weight: bold;
     text-decoration: none;
     color: white;
@@ -194,7 +194,7 @@ nav ul li a {
 
 }
 
-nav ul li a:hover {
+#mainNav ul li a:hover {
     color: rgb(255, 255, 255);
     text-shadow:
     0 0 2px rgb(255, 255, 255),
@@ -209,17 +209,55 @@ nav ul li a:hover {
 
 
 
+#search input{
+    height: 30px;
+    padding: 20px 0 0 0;
+}
+
+
+#search img{
+    position: relative;
+    height: 30px;
+    padding-top: 70px 0 0 0 ;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+/* AVATAR */
+.avatar{
+    height: 220px;
+    border-radius: 100%;
+    margin: 50px 0 30px 90px;
+    float: left;
+box-shadow:
+        0 0 2px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 15px rgb(255, 0, 98),
+        0 0 12px rgb(255, 0, 98),
+        0 0 25px rgb(255, 0, 98),
+        0 0 40px rgb(255, 0, 98);
+
+    }
+
 
 /* LATERAL DISPLAY */
 
 label i{
-    color: blueviolet;
+    font-size: 180%;
+    color: black;
     position: fixed;
     right: 0;
-    margin: 50px 18px 0 0;
+    margin: 50px 10px 0 0;
     cursor: pointer;
-    background-color: red;
     padding:  5px 5px 5px 5px;
+    size-adjust: 20%;
 }
 #check{
     display: none;
@@ -227,39 +265,42 @@ label i{
 #cuentaLateral{
     float: left;
     left: 100%;
-}
-
-#lateralCheck{
-    color: blue;
+    
 }
     #cuentaLateral ul{
         position: fixed;
         width: 20%;
-        height: 100%;
+        height: 110%;
         right: -100%;
-        margin-top: -200px;
+        margin-top: -220px;
         transition: all .5s;
-        background-color: #fff;
+        background-color: rgba(62, 62, 62, 0.9);
         z-index: 1;
     }
     #cuentaLateral ul li{
         display: block;
-        margin: 40px 0;
-        float: left;
-        padding: 10px 100px 10px 30px;
+        margin: 20px 20px 20px 20px;
+        padding: 10px 0px 10px 10px;
+        background-color:rgb(0, 0, 0);
+        border-radius: 10px;
+        clear: both;
+
     }
+        /* Content */
 
     #cuentaLateral ul li a{
-        color: black;
-        /* border: 1px red solid; */
+        color: white;
+        font-size: 110%;
+        font-weight: 900;
+        float: left;
+        margin-left: 50px;
+        text-decoration: none;
     }
 
 
-    #check:checked ~ ul{
-        right:0;
-    }
-
-
+#check:checked ~ ul{
+    right:0;
+}
 
 
 
