--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -209,15 +209,23 @@ header h1{
 
 
 
+/* BARRA DE BUSQUEDA */
+#search{
+    float: right;
+    position: absolute;
+    top: 7px;
+    margin: 0 30px 0 0;
+}
+
 #search input{
-    height: 30px;
-    padding: 20px 0 0 0;
+     height: 25px;
+    padding: 10px 0 0 0;
 }
 
 
 #search img{
     position: relative;
-    height: 30px;
+    height: 25px;
     padding-top: 70px 0 0 0 ;
     color: white;
 }
