--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -54,8 +54,6 @@
 | |__________________________________________________________________________________________________________________________________| |
 |______________________________________________________________________________________________________________________________________|
 
-margin: top right botton left;
-
     ++FUSION++
     https://lenguajecss.com/css/efectos/modos-de-fusion/
 
@@ -77,6 +75,16 @@ margin: top right botton left;
     scroll-behavior: smooth;
 }
 
+/* NYAN CAT~ */
+#cat{
+    position: absolute;
+    top: 135px;
+    left: 0;
+    height: 90px;
+    /* user-select: none; */
+    pointer-events: none;
+    z-index: 10 ;
+}
 
 .neonText {
     animation: flicker 1.5s infinite alternate;
@@ -119,7 +127,8 @@ body{
 }
     #arriba img{
         height: 40px;
-        width: 40px;   
+        width: 40px;
+        pointer-events: none;
     }
 
 /**Encabezado**/
@@ -168,11 +177,12 @@ header h1{
 }
 #mainNav ul{
     background-color: rgb(0, 0, 0);
+    height: 60px;
 }
 #mainNav ul li {
     display: inline-block;
     width: 7%;
-    margin: 5px;
+    margin: 15px 5px 5px 5px;
     padding: 5px;
     /* background-color: white; */
     border-radius: 7px; 
@@ -211,48 +221,62 @@ header h1{
 
 /* BARRA DE BUSQUEDA */
 #search{
-    float: right;
-    position: absolute;
-    top: 7px;
-    margin: 0 30px 0 0;
+    position: absolute; 
+    right: 330px;
+    top: 168px;
 }
 
 #search input{
-     height: 25px;
-    padding: 10px 0 0 0;
+    height: 25px;
+    width: 180px;
+    padding: 3px 0 0 10px;
+    font-size: 15px;
+    border-radius: 100px;
+    border: white solid 1px;
 }
 
+#search input:hover{
+    border: solid 1px #d81444;
+    /* width: 200px; */
+    /* transition: 0.5s; */
+}
 
 #search img{
     position: relative;
-    height: 25px;
-    padding-top: 70px 0 0 0 ;
-    color: white;
+    height: 20px;
+    bottom: -3px;
+    cursor: pointer;
 }
 
 
-
-
-
-
-
-
-
 /* AVATAR */
-.avatar{
+.avatar img{
     height: 220px;
     border-radius: 100%;
     margin: 50px 0 30px 90px;
     float: left;
-box-shadow:
-        0 0 2px rgb(255, 255, 255),
-        0 0 10px rgb(255, 255, 255),
-        0 0 15px rgb(255, 0, 98),
-        0 0 12px rgb(255, 0, 98),
-        0 0 25px rgb(255, 0, 98),
-        0 0 40px rgb(255, 0, 98);
+    box-shadow:
+    0 0 2px rgb(255, 255, 255),
+    0 0 10px rgb(255, 255, 255),
+    0 0 15px rgb(255, 0, 98),
+    0 0 12px rgb(255, 0, 98),
+    0 0 25px rgb(255, 0, 98),
+    0 0 40px rgb(255, 0, 98);
+    pointer-events: none;
+}
 
-    }
+.avatar p{
+    color: white;
+    position: absolute;
+    font-weight: 600;
+    font-size: large;
+    left: 0;
+    top: 230px;
+    padding: 10px 100% 10px 20px;
+    background-color: rgba(0, 0, 0, 0.553);
+    z-index: -1;
+
+}
 
 
 /* LATERAL DISPLAY */
@@ -267,8 +291,28 @@ label i{
     padding:  5px 5px 5px 5px;
     size-adjust: 20%;
 }
+
+label i:hover {
+    color: #d81444;
+}
 #check{
     display: none;
+}
+
+#LinesUp{
+    color: red;
+    z-index: 4;
+
+}
+
+/* Log put bottom */
+#logout{
+    position: relative;
+    top: 35%;
+}
+
+#logout:hover{
+    background-color: #d81444;
 }
 #cuentaLateral{
     float: left;
@@ -288,30 +332,29 @@ label i{
     #cuentaLateral ul li{
         display: block;
         margin: 20px 20px 20px 20px;
-        padding: 10px 0px 10px 10px;
+        padding: 10px 0 10px 0;
         background-color:rgb(0, 0, 0);
         border-radius: 10px;
+        text-align: center;
         clear: both;
+    }
 
+    #cuentaLateral ul li:hover{
+        background-color:rgb(41, 41, 41);
     }
         /* Content */
 
     #cuentaLateral ul li a{
         color: white;
         font-size: 110%;
+        width: 100%;
         font-weight: 900;
-        float: left;
-        margin-left: 50px;
         text-decoration: none;
     }
-
 
 #check:checked ~ ul{
     right:0;
 }
-
-
-
 
 
 /**Aside**/
@@ -527,10 +570,10 @@ footer article ul li{
             margin-bottom: 20px;
         }
 
-    #copyright{
-        bottom: 5px;
-        right: 10px;
-        font-size: 90%;
-        position: absolute;
-        text-align: center;
-    }
+#copyright{
+    bottom: 5px;
+    right: 10px;
+    font-size: 90%;
+    position: absolute;
+    text-align: center;
+}
