--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -517,8 +517,9 @@ main article h4{
 
 /**FOOTER**/
 footer{
+    position: absolute;
+    bottom: 0;
     color: white;
-    float: left;
     width: 100%;
     background-color: black;
     position: relative;
