--- a/Lenguaje_de_marcas/mangak/styles/mangaMenu.css
+++ b/Lenguaje_de_marcas/mangak/styles/mangaMenu.css
@@ -575,3 +575,22 @@ footer article ul li{
     position: absolute;
     text-align: center;
 }
+
+
+
+/* ============================================== */
+/* ============================================== */
+/* ============================================== */
+/*--------------------- CAPS ---------------------*/
+/* ============================================== */
+/* ============================================== */
+/* ============================================== */
+
+
+.pagina{
+    float: left;
+    width: 800px;
+    height: 1200px;
+    padding: 0 0 0 30%;
+}
+
