--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -395,11 +395,13 @@ aside ul h3{
     #textoTop{
         text-decoration: none;
         position: absolute;
-        top: 35%;
+        bottom: 7px;
         color: white;
         background-color: rgba(0, 0, 0, 0.581);
         margin: 0 0 0 11%;
         padding: 0 32.5%;
+        border-bottom-right-radius: 4px;
+        border-bottom-left-radius: 4px;
     }
 
 aside ul li{
