--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -188,12 +188,14 @@ header h1{
 #mainNav ul{
     background-color: rgb(0, 0, 0);
     height: 60px;
+    overflow-y: hidden;
+
 }
 #mainNav ul li {
     display: inline-block;
     width: 7%;
     margin: 15px 5px 5px 5px;
-    padding: 5px;
+    padding: 5px 5px 20px 5px;
     /* background-color: white; */
     border-radius: 7px; 
 }
@@ -225,7 +227,53 @@ header h1{
     0 0 30px rgb(255, 0, 98);
 }
 
-/* object-fit: cover; */
+    /* menu desplegable */
+    #mainNav ul ul {
+        display:none;
+        position: absolute;
+        width: 80%;
+        left: 10%;
+        top: 210px;
+        height: 380px;
+        background-color: rgba(0, 0, 0, 0.888);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border: white 2px solid;
+        z-index: 3;
+    }
+    
+    /* items del menu desplegable */
+    #mainNav ul ul li {
+            height: 15px;
+            width: 140px;
+            overflow-y: hidden;
+    }
+ 
+    #mainNav ul ul li:hover > label {
+        color: #d81444;
+    }
+    #mainNav ul ul li label{
+        color: white;
+    }
+
+    /* items del menu desplegable al pasar el ratón */
+    #mainNav ul li:hover > ul {
+        display:block;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
