--- a/Lenguaje_de_marcas/mangak/styles/mangaMenu.css
+++ b/Lenguaje_de_marcas/mangak/styles/mangaMenu.css
@@ -635,10 +635,14 @@ footer article ul li{
 
 
 .pagina{
-    float: left;
+    /* float: left;
     width: 800px;
     height: 1200px;
-    padding: 0 0 10px 30%;
+    padding: 0 0 10px 30%; */
+    display: block;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .control{
