--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -91,7 +91,7 @@
     top: 135px;
     left: 0;
     height: 90px;
-    /* user-select: none; */
+    user-select: none;
     pointer-events: none;
     z-index: 10 ;
 }
